# HTB-AI-Evasion

./: main.py  pyproject.toml
models/: spam_classifier.pkl
