[project]
name = "ai-evasion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "htb-ai-library",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
htb-ai-library = { git = "https://github.com/PandaSt0rm/htb-ai-library" }
